src/index.css
/* ... */
.sidebar-dark, .sidebar-dark .list-group-item, .sidebar-dark .list-group-item svg path, .darkgrey-bg .table svg path {
    background-color: #262a2f !important;
    color: white;
    stroke: white;
}
.darkgrey-bg {
    background-color: #1e2124 !important;
    min-height: 100%;
}
.darkpurple-bg {
    background-color: #413ab8;
    color: white;
}
.dark-level {
    background-color: #313a44 !important;
    color: #e4ecff !important;
}
.dark-level-name {
    color: #e4ecff !important;
}
.white {
    color: white;
}
.darkgrey-bg input, .darkgrey-bg textarea, .darkgrey-bg select,
.darkgrey-bg select option, .darkgrey-bg .job, .darkgrey-bg .table tbody td {
    background: rgb(43 46 49);
    color: white;
}
.darkgrey-bg .course {
    color: white !important;
}
.darkgrey-bg .logo-title {
    color: #671bf2;
}
/*------------------------------------------------------------------*/

.sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: white;
    overflow-x: hidden;
    padding-top: 25px;
    transition: 0.5s;
    opacity: 0;
}
.sidebar.show {
    width: 300px;
    opacity: 1;
}
.list-group {
    background-color: inherit;
}
.list-group-item {
    border: none !important;
    padding: 18px !important;
    background-color: inherit !important;
    font-size: 17px;
}
.sidebar a {
    text-decoration: none;
}
.list-group-item svg {
    margin-top: -3px;
}
.active .list-group-item, .list-group-item:hover, .list-group-item:hover svg path, .active .list-group-item svg path, .list-group-item:hover a{
    background-color: inherit;
    color: #4439F0 !important;
    stroke: #4439F0;
    font-weight: 500;
    cursor: pointer;
}

/*------------------------------------------------------------------*/

.message-container {
    position: fixed;
    padding: 10px;
    background-color: #75ffb0;
    min-width: 300px;
    min-height: 60px;
    font-size: 17px;
    font-weight: lighter;
    color: black;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    right: 0;
    z-index: 200;
    margin-top: 10px;
    margin-right: 10px;
    transition: 1s;
}
.message-container .closeMessage {
    cursor: pointer;
}

/*------------------------------------------------------------------*/

.logo-container {
    margin-left: -5px;
    text-decoration: none;
}
.logo-container .logo {
    height: 47px;
    width: 45px;
}
.logo-title {
    font-family: 'Roboto Mono', monospace;
    color: black;
    font-size: 26px;
    color: #4300bc;
}

.header-logo {
    text-decoration: none;
}

.header-logo .logo {
    height: 41px;
    width: 40px;
}
.header-logo .logo-title {
    font-size: 24px;
}

/*------------------------------------------------------------------*/

.white-block {
    border-radius: 30px;
    background-color: white;
}

/*------------------------------------------------------------------*/

@keyframes spinner {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
.loading-spinner {
    width: 160px;
    height: 160px;
    border: 20px solid #f3f3f3ab; /* Light grey */
    border-top: 20px solid #4439F0; /* Black */
    border-radius: 50%;
    animation: spinner 1.5s linear infinite;
    position: absolute;
    left: 44%;
    top: 36%;
}
.spinner-container {
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #00000074;
    z-index: 5;
}
.loading-page {
    overflow-y: hidden;
    height: 100%;
    background-color: #EFEEFA;
}

/*------------------------------------------------------------------*/
.no-underline {
    text-decoration: none !important;
}
h5 {
    font-size: 19px !important;
}
.black {
    color: black !important;
}
.purple {
    color: #4439F0 !important; 
}
.purple-bg {
    background-color: #6C63F2; 
    color: white;
}
.btn-purple {
    background-color: #4439F0;
    color: white;
    padding: 8px 37px;
    border-radius: 0px;
    font-weight: 500;
    font-size: 15px;
    border: none;
    margin-top: 2px;
    text-decoration: none;
}
.btn-purple:hover {
    color: white;
}

.grey-bg {
    background-color: #F5F5F5;
    min-height: 100%;
}
.btn {
    color: #403F3F;
    border-radius: 0px !important;
    font-weight: 500 !important;
    font-size: 15px !important;
}

/*------------------------------------------------------------------*/

.header {
    background-color: white;
}
.header .fa {
    font-size: 22px;
}
.profile-pic {
    border: 1px solid black;
    border-radius: 50%;
    width: 33px;
    height: 33px;
    margin-top: -4px;
}
.header .profile-pic {
    width: 40px;
    height: 40px;
}
.header .dropdown {
    display: inline;
}
.header .dropdown button, .header .btn-info.active {
    background-color: white !important;
    border: none !important;
    box-shadow: none !important;
}

/*------------------------------------------------------------------*/

.content {
    transition: 0.5s;
    margin-left: 0;
}
.content.shift {
    margin-left: 300px;
}

/*------------------------------------------------------------------*/

.section {
    background-color: white;
    padding: 40px;
    margin: 30px;
    border-radius: 30px;
    text-align: center;
}
.overlap {
    margin-top: -25px;
}

/*------------------------------------------------------------------*/

.level {
    padding: 25px 28px;
    height: 20px;
    width: 25px;
    border-radius: 50%;
    background-color: white;
    border: 2px solid #bdbdbd9c;
    color: #bdbdbdde;
    font-size: 20px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}
.level.unlocked {
    border: 2px solid #4439F0;
    color: #4439F0;
    font-size: 18px;
}
.level-name {
    display: flex;
    justify-content: center;
    text-align: center;
    margin-top: 5px;
    color: #a3a3a3;
}
/* ... */

